--- a/Combined Project/employee/index.html
+++ b/Combined Project/employee/index.html
@@ -75,7 +75,7 @@
             const backBtn = document.getElementById('backBtn');
             if (backBtn) {
                 backBtn.addEventListener('click', function() {
-                    window.location.href = "../manager/employee.html";
+                    //window.location.href = "../manager/employee.html"; ayo this takes u to the employee page for the manager so we need to make a seperate page or just have this go to the to do list for the employee when it gets added
                 });
             }
         });
