made the linking work with to do list page

--- a/Combined Project/manager/Index.html
+++ b/Combined Project/manager/Index.html
@@ -1,20 +1,16 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Managers Dashboard</title>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Managers Dashboard</title>
 
-    <link 
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" 
-      rel="stylesheet"
-    >
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="style.css">
 
-    <script src="tasks.js"></script>
-    <script src="script.js"></script>
-  </head>
+        <script src="../js/manager.js"></script>
+    </head>
 
     <body>
         <div class="container my-4">
@@ -31,13 +27,13 @@
                         <div class="progress mb-2">
                             <div class="progress-bar bg-primary" style="width: 75%"></div>
                         </div>
-                        <a href="projectB.html" class="text-decoration-none">
+                        <a class="text-decoration-none">
                             <p class="mb-1 hover-effect p-2 rounded" id="projectB">Project B - 50% Due: 2025-12-13</p>
                         </a>
                         <div class="progress mb-2">
                             <div class="progress-bar bg-success" style="width: 50%"></div>
                         </div>
-                        <a href="projectC.html" class="text-decoration-none">
+                        <a class="text-decoration-none">
                             <p class="mb-1 hover-effect p-2 rounded" id="projectC">Project C - 30% Due: 2026-01-01</p>
                         </a>
                         <div class="progress">
