--- a/Combined Project/employee/index.html
+++ b/Combined Project/employee/index.html
@@ -23,7 +23,11 @@
 
         <div class="row">
             <div class="col-12">
-                <h2>Forum Topics</h2>
+                <div class="d-flex justify-content-between align-items-center mb-4">
+                    <h2>Forum Topics</h2>
+                    <button id="backBtn" class="btn btn-secondary">Back</button>
+                </div>
+                
                 <p style="color: gray;">Browse technical and administrative topics</p>
 
                 <button class="btn btn-primary" onclick="createNewTopic()">
@@ -60,10 +64,6 @@
             <p id="no-results" style="display:none; color: gray;">No topics found.</p>
         </div>
 
-        <div class="text-center my-4">
-            <button id="backBtn" class="btn btn-secondary">Back</button>
-        </div>
-
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -75,7 +75,7 @@
             const backBtn = document.getElementById('backBtn');
             if (backBtn) {
                 backBtn.addEventListener('click', function() {
-                    //window.location.href = "../manager/employee.html"; ayo this takes u to the employee page for the manager so we need to make a seperate page or just have this go to the to do list for the employee when it gets added
+                    window.location.href = "../employee/employeepage.html";
                 });
             }
         });
