--- a/Combined Project/employee/topic.html
+++ b/Combined Project/employee/topic.html
@@ -45,10 +45,6 @@
 
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/data.js"></script>
-    <script src="assets/js/topicview.js"></script>
-
     <div class="modal fade" id="addPostModal" tabindex="-1">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -83,4 +79,10 @@
         </div>
     </div>
 </body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../js/data.js"></script>
+    <script src="../js/topicview.js"></script>
 </html>
+
+
+ 
