--- a/Combined Project/manager/Index.html
+++ b/Combined Project/manager/Index.html
@@ -7,15 +7,17 @@
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
 
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="../css/style.css">
 
         <script src="../js/manager.js"></script>
     </head>
 
     <body>
         <div class="container my-4">
-            <h1 class="text-center mb-4">Manager Dashboard</h1>
-
+            <div class="d-flex justify-content-between align-items-center mb-4">
+                <h1 class="text-center mb-4">Manager Dashboard</h1>
+                <button type="button" class="btn btn-danger" id="logoutButton">Logout</button>
+            </div>
             <div class="row">
                 <div class="col">
                     <div class="card shadow-sm">
@@ -50,23 +52,46 @@
                             <h5 class="card-title">Create New Task</h5>
                             <form id="createTaskForm" class="row g-2">
                                 <div class="col-md-3">
-                                    <input id="newTaskProject" class="form-control" placeholder="Project">
+                                    <select id="newTaskProject" class="form-select">
+                                        <option value="projectA">Project A</option>
+                                        <option value="projectB">Project B</option>
+                                        <option value="projectC">Project C</option>
+                                    </select>
                                 </div>
                                 <div class="col-md-3">
-                                    <input id="newTaskAssignee" class="form-control" placeholder="Employee">
+                                    <select id="newTaskAssignee" class="form-select">
+                                        <option value="mack">Mack</option>
+                                        <option value="sarah">Sarah</option>
+                                    </select>
                                 </div>
                                 <div class="col-md-3">
                                     <input id="newTaskName" class="form-control" placeholder="Task name">
                                 </div>
                                 <div class="col-md-2">
-                                    <select id="newTaskStatus" class="form-select">
-                                        <option value="To Do">To Do</option>
-                                        <option value="In Progress">In Progress</option>
-                                        <option value="Done">Done</option>
-                                    </select>
+                                    <input type="date" id="newTaskDueDate" class="form-control">
                                 </div>
                                 <div class="col-md-1 d-grid">
                                     <button id="createTaskBtn" class="btn btn-primary">Create</button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row mt-3">
+                <div class="col">
+                    <div class="card shadow-sm">
+                        <div class="card-body">
+                            <h5 class="card-title">Create Project</h5>
+                            <form id="createProjectForm" class="row g-2">
+                                <div class="col-md-4">
+                                    <input id="newProjectName" class="form-control" placeholder="Project name">
+                                </div>
+                                <div class="col-md-4">
+                                    <input type="date" id="newProjectDueDate" class="form-control">
+                                </div>
+                                <div class="col-md-4 d-grid">
+                                    <button id="createProjectBtn" class="btn btn-primary">Create Project</button>
                                 </div>
                             </form>
                         </div>
