--- a/Combined Project/manager/projectA.html
+++ b/Combined Project/manager/projectA.html
@@ -10,7 +10,7 @@
         rel="stylesheet"
     >
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <div class="container my-4">
@@ -54,28 +54,32 @@
                             </div>
                         </h5>
 
-                        <tbody id="taskTableBody">
-                            <tr>
-                                <td>Make website,</td>
-                                <td>Due: 2025-11-05</td>
-                                <td>
-                                    <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" id="taskComplete1" aria-label="Mark task as complete">
-                                        <label class="form-check-label" for="taskComplete1">Complete</label>
-                                    </div>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>delete frontend,</td>
-                                <td>Due: 2025-12-05</td>
-                                <td>
-                                    <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" id="taskComplete1" aria-label="Mark task as complete">
-                                        <label class="form-check-label" for="taskComplete1">Complete</label>
-                                    </div>
-                                </td>
-                            </tr>
-                        </tbody>
+                        <div class="table-responsive">
+                            <table class="table table-hover" id="taskTable">
+                                <thead>
+                                    <tr>
+                                        <th>Task</th>
+                                        <th>Project</th>
+                                        <th>Status</th>
+                                        <th>Due Date</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="taskTableBody">
+                                    <tr>
+                                        <td>Make website</td>
+                                        <td>Project A</td>
+                                        <td>Completed</td>
+                                        <td>2025-11-05</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Steal the moon</td>
+                                        <td>Project A</td>
+                                        <td>In Progress</td>
+                                        <td>2025-12-05</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
                 </div>
             </div>
