--- a/Combined Project/manager/employee.html
+++ b/Combined Project/manager/employee.html
@@ -75,6 +75,10 @@
                             <span>Completed Tasks:</span>
                             <span id="completedTaskCount" class="badge bg-success">0</span>
                         </div>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <span>Overdue Tasks:</span>
+                            <span id="overdueTasks" class="badge bg-danger">0</span>
+                        </div>
                     </div>
                 </div>
             </div>
